# super-pi

./: .env  CHANGELOG.md  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/workflows/: aria-compliance.yml  ci.yml  neuroforge-nexus-sync.yml  pq-security.yml  security-audit.yml  zk-identity.yml
apps/web/app/: page.tsx
contracts/: AbsoluteZeroRiskEngine.sol  ExistentialRiskEngine.sol  HyperspaceAMM.sol  MetaverseEconomyBridge.sol  NeuralDNARegistry.sol  OmegaConsciousness.sol  QuantumEntanglementLedger.sol  SPI_Stablecoin.sol  SuperAppFactory.sol  TranscendenceNexus.sol
contracts/phase3/: ISPIRegistry.sol  RWAVaultFactory.sol  SPIRegistry.sol  SingularityBridge.sol
docs/: SUPER_APP_SINGULARITY.md
docs/halal-certs/: LM-HALAL-PHASE3-001-SPI-TBILL-V1.md  LM-HALAL-PHASE3-002-SPI-REALESTATE-V1.md  LM-HALAL-PHASE3-003-SPI-SUKUK-V1.md
docs/legal/: HALAL_CERT_PHASE3_VAULTS_LM-2026-0604.md
docs/phase3/: lex-machina-compliance-notes-phase3.md  vault-activation-runbook.md  vault-configurations.md
oracle/: fiat_rates_latest.json
reports/: health-report.json
scripts/: contract-registry.py  deploy.sh  health-check.py  repository-audit.py  test.sh
scripts/phase3/: DeployPhase3Vaults.s.sol  DeployPhase3Vaults_A.s.sol  DeployPhase3Vaults_B.s.sol
src/hyper_core/rust/: Cargo.toml
src/hyper_core/rust/src/: lib.rs  pi_network_super_advanced_evolution_engine.rs  pi_network_super_intelligence_core.rs
